# corpotismbot

./: .gitignore  README.md  app.js  app.py  chat.html  chat.js  config.py  deduplicate_nodes.py  generate_content.py  index.html  knowledge_base.json  llm_utils.py  ontology.json  prompts.py  pyproject.toml  requirements.txt  serve.py  styles.css  update_knowledge_base.py
.github/workflows/: deploy.yml
docs/: deployment.md  systemd.md
scripts/: graceful_restart.sh
static/css/: style.css  styles.css
static/js/: chat.js  knowledge.js
templates/: base.html  chat.html  edit_knowledge.html  index.html  knowledge.html  login.html  todo.html  topic.html
