[tool.poetry]
name = "corpotismbot"
version = "0.1.0"
description = "Corpotism Bot"
authors = ["Matt <matt@corpotism.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flask = "3.0.2"
werkzeug = "3.0.1"
httpx = "0.28.1"
flask-login = "0.6.3"
kokoro = "^0.9.4"
soundfile = "*"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
# Development dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"